--- a/Diabetest2/app/src/main/res/layout/activity_pruebcon.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_pruebcon.xml
@@ -9,23 +9,23 @@
     <TextView
         android:id="@+id/busc"
         android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="119dp"
         android:layout_marginRight="119dp"
+        android:layout_marginTop="35dp"
         android:text="Lista de misiones"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_view45"
         app:layout_constraintEnd_toStartOf="@+id/buscmisedit"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view45"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="56dp"
-        android:scrollbars="vertical"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
