--- a/Diabetest2/app/src/main/res/layout/activity_menu_paciente.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_menu_paciente.xml
@@ -74,7 +74,7 @@
                     android:layout_margin="4dp"
                     android:adjustViewBounds="true"
                     android:background="@android:color/background_light"
-
+                    android:onClick="encuestas"
                     app:srcCompat="@drawable/encuestas"
                     android:scaleType="fitXY"
 
