validaciones y perfil de tratamieento

--- a/Diabetest2/app/src/main/res/layout/activity_encuesta1.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_encuesta1.xml
@@ -26,6 +26,7 @@
 
         <Button
             android:id="@+id/button40"
+            android:onClick="procesar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Continuar" />
