--- a/Diabetest2/app/src/main/res/layout/activity_modmisp.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_modmisp.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="basico"
-            android:text="informacion basica" />
+            android:text="informacion básica" />
 
         <Button
             android:id="@+id/button39"
