--- a/Diabetest2/app/src/main/res/layout/activity_crearmisg3.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_crearmisg3.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="pasos"
+        android:text="Pasos"
         android:textColor="@color/negro"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
