--- a/Diabetest2/app/src/main/res/layout/activity_crearmisg4.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_crearmisg4.xml
@@ -12,6 +12,15 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView160"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Agregar Paso"
+            android:textColor="@color/negro"
+            android:textSize="30sp"
+            android:gravity="center"/>
+
+        <TextView
             android:id="@+id/textView142"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,20 +37,20 @@
             android:id="@+id/textView146"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="descripcion" />
+            android:text="Descripción" />
 
         <EditText
             android:id="@+id/desc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textMultiLine" />
 
         <TextView
             android:id="@+id/textView147"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Dias" />
+            android:text="Días de Duración" />
 
         <Spinner
             android:id="@+id/spinnermar"
