--- a/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
@@ -46,7 +46,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="130dp"
                     android:orientation="horizontal">
 
 
@@ -56,7 +56,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="205dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -64,7 +64,7 @@
                             <TextView
                                 android:id="@+id/textView154"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="50dp"
                                 android:layout_weight="1"
                                 android:text="Dias Totales"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
@@ -90,7 +90,7 @@
                             <TextView
                                 android:id="@+id/descripcion"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:text="TextView" />
                         </LinearLayout>
