cambios chat beta
beta

--- a/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
@@ -76,7 +76,7 @@
             <ListView
                 android:id="@+id/id_mensajes_recibidos"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="553dp"
                 android:layout_margin="8dp"
                 android:background="@color/blanco50"
                 android:footerDividersEnabled="true"
@@ -84,6 +84,40 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <EditText
+        android:id="@+id/editText16"
+        android:layout_width="324dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button47"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text=">"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.829"
+        app:layout_constraintStart_toEndOf="@+id/editText16"
+        app:layout_constraintTop_toTopOf="@+id/editText16"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
