--- a/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
@@ -86,7 +86,7 @@
     </ScrollView>
 
     <EditText
-        android:id="@+id/editText16"
+        android:id="@+id/mensajet"
         android:layout_width="324dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
@@ -111,12 +111,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="sendchat"
         android:text=">"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.829"
-        app:layout_constraintStart_toEndOf="@+id/editText16"
-        app:layout_constraintTop_toTopOf="@+id/editText16"
+        app:layout_constraintStart_toEndOf="@+id/mensajet"
+        app:layout_constraintTop_toTopOf="@+id/mensajet"
         app:layout_constraintVertical_bias="1.0" />
 
 
