--- a/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
@@ -29,19 +29,20 @@
     <ScrollView
         android:id="@+id/scrollView5"
         android:layout_width="0dp"
+        android:windowSoftInputMode="adjustResize"
         android:layout_height="0dp"
         android:layout_marginTop="58dp"
+        android:layout_marginBottom="8dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mensajet"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -76,8 +77,10 @@
             <ListView
                 android:id="@+id/id_mensajes_recibidos"
                 android:layout_width="match_parent"
-                android:layout_height="553dp"
+                android:layout_height="match_parent"
                 android:layout_margin="8dp"
+                android:transcriptMode="alwaysScroll"
+                android:stackFromBottom="true"
                 android:background="@color/blanco50"
                 android:footerDividersEnabled="true"
                 android:headerDividersEnabled="true" />
@@ -88,7 +91,7 @@
     <EditText
         android:id="@+id/mensajet"
         android:layout_width="324dp"
-        android:layout_height="43dp"
+        android:layout_height="53dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -96,7 +99,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Escriba un mensaje"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
